--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,7 +331,10 @@ h1, h2, h3, h4, h5, h6,
   color: #212529; }
 
 h1, .h1 {
-  font-size: 2.5rem; }
+  font-size: 18px;
+    color: rgba(255, 255, 255, 0.8);
+    max-width: 600px;
+    line-height: 1.8;}
 
 h2, .h2 {
   font-size: 2rem; }
@@ -7082,7 +7085,21 @@ a.text-navy:focus, a.text-navy:hover {
   list-style-type: none;
   display: -webkit-box;
 }
-
+.logo-main-animate{
+  position: absolute;
+  left: 20vh;
+  top: 80vh;}
+  @media screen and (max-width: 760px){
+    .logo-main-animate {display: none;}
+  }
+.logo-icon-main{
+  width: 18vh;
+  animation-name: rotation;
+  animation-duration: 7s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  opacity: 0.3;
+}
 .logo-icon-animate {
   width: 55px;
   animation-name: rotation;
@@ -7504,7 +7521,7 @@ a.text-navy:focus, a.text-navy:hover {
   position: relative;
   height: 100vh; }
   @media (min-width: 767px) and (max-width: 960px) {
-    .pb_cover_v1 {height: 130vh}
+    .pb_cover_v1 {height: 140vh}
     .img2 {display: none;}
   }
   @media (max-width: 767px) {
@@ -7535,7 +7552,7 @@ a.text-navy:focus, a.text-navy:hover {
         .pb_cover_v3 > .container > .row,
         .pb_cover_v4 > .container > .row {
           height: inherit;
-          padding: 6em 0; } }
+          /*padding: 6em 0;*/ } }
   .pb_cover .play,
   .pb_cover_v1 .play,
   .pb_cover_v2 .play,
